compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__field_not_in_any_variant.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub record Person {\n    Teacher(name: String, age: Int, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_height(person: Person) { person.height }"
---
----- SOURCE CODE

pub record Person {
    Teacher(name: String, age: Int, title: String)
    Student(name: String, age: Int)
}
pub fn get_height(person: Person) { person.height }

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.rakun:6:43
  │
6 │ pub fn get_height(person: Person) { person.height }
  │                                           ^^^^^^^ This field does not exist

The value being accessed has this type:

    Person

It has these accessible fields:

    .age
    .name
